--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <body background="img/mainMenuBackground.jpg"></body>
+        <header>
+            <img src="img/Habitat_for_humanity.svg.png" class="logo">
+            <nav>
+                <button class="button" style="vertical-align:middle"><span>Shop</span></button>
+                <button class="button" style="vertical-align:middle"><span>About Us</span></button>
+                <button class="button" style="vertical-align:middle"><span>Account</span></button>
+            </nav>
+        </header>
+
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
